--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <li><a href="#crescimento">Crescimento</a></li>
  <li><a href="#contato">Contato</a></li>
  </ul>
- <button class="btn-navbar">Click</button>
+ <a href="https://www.seusite.com.br" class="btn-navbar" target="_blank">Portal</a>
  <button class="alternar-menu" id="alternarMenu">
  <span></span>
  <span></span>
@@ -40,10 +40,10 @@
  <main class="card-container">
  <nav class="side-nav">
  <ul>
- <li><a href="#projetos">Projetos</a></li>
- <li><a href="#instituto">Instituto</a></li>
- <li class="active"><a href="#apresentacao">Apresentação</a></li>
- <li><a href="#contato">Contato</a></li>
+ <li class="active"><a href="#" data-conteudo="apresentacao">Apresentação</a></li>
+ <li><a href="#" data-conteudo="historia">História</a></li>
+ <li><a href="#" data-conteudo="perfil">Perfil</a></li>
+ <li><a href="#" data-conteudo="trajetoria">Trajetória</a></li>
  </ul>
  </nav>
 
@@ -65,7 +65,7 @@
  <h2 id="subtitulo">Contabilidade e Desenvolvimento local</h2>
 
  <p class="descricao" id="desc">
- Almir Rogério dos Santos, conhecido como Almir da Exatus, é contador, empresário e candidato a deputado. Possui 25 anos de experiência em contabilidade e administração de empresas, construindo uma trajetória marcada pela disciplina, trabalho duro e o compromisso com o desenvolvimento da região.
+ Almir Rogério dos Santos, conhecido como Almir da Exatus, é contador, empreendedor e pré-candidato a deputado estadual. Carrega 25 anos de atuação em gestão e contabilidade, formando uma história guiada por dedicação, ética, compromisso e um olhar firme para fazer a diferença em São Paulo.
  </p>
 
  <div class="assinatura">Almir Rogério</div>
@@ -91,10 +91,11 @@
 <!-- Quem é Almir -->
 <section class="about-section">
  <div class="container">
- <h2 class="section-title">Quem é Almir da Exatus</h2>
+ <h2 class="section-title">Quem é Almir?</h2>
  <div class="about-content">
- <p>Almir Rogério dos Santos, conhecido como Almir da Exatus, construiu uma carreira sólida ao longo de mais de 25 anos no setor contábil e empresarial. Reconhecido pela capacidade técnica e pela facilidade em transformar desafios em soluções, tornou-se referência em gestão, planejamento e desenvolvimento econômico.</p>
- <p>Sua trajetória é marcada por compromisso com resultados, proximidade com a comunidade e atuação direta no fortalecimento das pequenas e médias empresas.</p>
+ <p>Almir Rogério dos Santos, conhecido como Almir da Exatus, construiu sua história unindo empreendedorismo, compromisso público e um profundo respeito pelas pessoas. Contador e empresário, sempre se destacou pela forma responsável de conduzir negócios e pela habilidade de organizar, orientar e impulsionar projetos que fazem diferença na vida real de quem trabalha e produz</p>
+ <p>Com 25 anos de experiência em gestão, contabilidade e administração estratégica, Almir ajudou empresas, profissionais e comunidades a crescerem de forma estruturada, sempre pautado pela disciplina, pelo trabalho sério e pelo compromisso com resultados reais. Sua vivência no setor lhe deu uma visão ampla sobre as necessidades das cidades, das famílias e dos empreendedores que movimentam a economia local</p>
+ <p>Agora, como pré-candidato a deputado estadual, leva consigo essa bagagem construída na prática não em promessas. Seu compromisso é representar com seriedade, dialogar com quem precisa ser ouvido e atuar com um olhar firme para transformar São Paulo em um estado melhor e preparado para gerar novas oportunidades para todos.</p>
  </div>
  </div>
 </section>
@@ -102,34 +103,42 @@
 <!-- Projetos Estruturantes -->
 <section id="projetos" class="secao-projetos">
  <div class="container">
- <h2 class="section-title">Projetos Estruturantes para Bertioga</h2>
- <p class="section-intro">Um conjunto de propostas focadas no impacto imediato e no desenvolvimento estratégico da cidade, com responsabilidade e clareza no uso dos recursos.</p>
+ <h2 class="section-title">Projetos para Bertioga</h2>
+ <p class="section-intro">Iniciativas pensadas para atender às necessidades da cidade que ele representa, voltadas a melhorar a vida dos moradores da região
+
+
+ </p>
  
 <div class="grid-projetos">
 <div class="cartao-projeto">
 <div class="icone-projeto"> </div>
  <h3>Infraestrutura</h3>
- <p>Expansão da infraestrutura urbana e de mobilidade para melhorar a qualidade de vida.</p>
+ <p>Revitalização de espaços públicos e soluções de mobilidade para tornar a cidade mais funcional e segura.</p>
  </div>
  <div class="cartao-projeto">
  <div class="icone-projeto"> </div>
  <h3>Saúde</h3>
- <p>Fortalecimento dos serviços de saúde e atendimento preventivo.</p>
+ <p>Fortalecimento da atenção básica, ampliação de equipes e ações preventivas para melhorar o atendimento e reduzir a demanda por emergências.</p>
  </div>
  <div class="cartao-projeto">
  <div class="icone-projeto"> </div>
  <h3>Educação</h3>
- <p>Programas de formação profissional e empregabilidade.</p>
+ <p>Ampliação do acesso ao ensino superior, com criação de novos polos universitários em Bertioga, reduzindo a necessidade de deslocamento para Mogi das Cruzes ou Santos.</p>
  </div>
  <div class="cartao-projeto">
  <div class="icone-projeto"> </div>
  <h3>Economia</h3>
- <p>Projetos que ampliem o crescimento econômico e social da região.</p>
+ <p>Incentivo a novos negócios, fortalecimento do comércio local e simplificação de processos para atrair investimentos e ampliar oportunidades de renda.</p>
  </div>
  <div class="cartao-projeto">
  <div class="icone-projeto"> </div>
  <h3>Transparência</h3>
- <p>Compromisso com transparência total no destino das verbas.</p>
+ <p>Acompanhamento público das despesas, acesso fácil às informações e prestação de contas contínua para garantir confiança na gestão dos recursos.</p>
+ </div>
+ <div class="cartao-projeto">
+ <div class="icone-projeto"> </div>
+ <h3>Gestão e Planejamento</h3>
+ <p>Modelo de gestão orientado por dados e metas, integrando áreas e garantindo uso eficiente das verbas para melhorar serviços essenciais.</p>
  </div>
  </div>
  </div>
@@ -138,38 +147,45 @@
 <!-- Instituto do Idoso -->
 <section id="instituto" class="instituto-section">
  <div class="container">
- <h2 class="section-title">Instituto do Idoso - Uma Transformação Concreta</h2>
- <p class="section-intro">Um dos pilares centrais da proposta é a criação do Instituto do Idoso de Bertioga, um centro de referência projetado para melhorar a qualidade de vida da população idosa.</p>
+ <h2 class="section-title">Instituto do Idoso - Uma proposta necessária</h2>
+ <p class="section-intro">Uma das propostas é a criação do Instituto do Idoso de Bertioga, projetado para melhorar a qualidade de vida da população idosa.</p>
  
  <div class="instituto-content">
+ <div class="instituto-hero">
+ <div class="instituto-image">
+ <img src="https://i.pinimg.com/1200x/78/0f/25/780f25868d52a97f5e150dc04312355e.jpg" alt="Pessoa idosa na fiseotepia">
+ </div>
  <div class="instituto-box">
  <h3>O que o Instituto vai oferecer</h3>
+  <p>A ideia é oferecer um lugar feito para cuidar melhor dos idosos e oferecer mais qualidade de vida.</p>
+
  <ul>
- <li>Atendimento de saúde preventivo e acompanhamento contínuo</li>
- <li>Espaço de convivência, cultura, lazer e atividades físicas</li>
- <li>Suporte psicológico e acompanhamento social</li>
- <li>Programas permanentes de oficinas, inclusão digital e autonomia</li>
- <li>Redução da pressão sobre unidades de saúde e hospitais</li>
+ <li>Atendimento de saúde e acompanhamento</li>
+ <li>Espaço para convivência, cultura, lazer e exercícios</li>
+ <li>Apoio psicológico e social</li>
+ <li>Oficinas, cursos e inclusão digital</li>
+ <li>Ajuda a diminuir a lotação dos postos de saúde e hospitais</li>
  </ul>
+ </div>
  </div>
 
  <div class="instituto-box dark">
  <h3>Como a verba será utilizada</h3>
  <div class="verba-item">
  <h4>1. Construção e Equipamentos</h4>
- <p>Estrutura moderna, acessível e bem equipada para atendimento multidisciplinar.</p>
+ <p>Prédio moderno, acessível e preparado para vários tipos de atendimento.</p>
  </div>
  <div class="verba-item">
  <h4>2. Equipes Técnicas Especializadas</h4>
- <p>Profissionais de saúde, assistência social, atividades físicas, educação e acompanhamento familiar.</p>
+ <p>Profissionais de saúde, assistência social, atividades físicas e apoio às famílias.</p>
  </div>
  <div class="verba-item">
- <h4>3. Programas Permanentes e Oficinas</h4>
- <p>Atividades diárias, cursos e atendimento contínuo, garantindo impacto duradouro.</p>
+ <h4>3. Programas e Oficinas</h4>
+ <p>Atividades, cursos e atendimento contínuo para gerar resultados de verdade.</p>
  </div>
  <div class="verba-item">
  <h4>4. Transparência e Monitoramento</h4>
- <p>Publicação de relatórios digitais e indicadores de desempenho acessíveis à população.</p>
+ <p>Relatórios e indicadores publicados para toda a população acompanhar.</p>
  </div>
  </div>
  </div>
@@ -182,7 +198,7 @@
  <div class="growth-content">
  <div class="growth-text">
  <h2 class="section-title">Crescimento de Apoio</h2>
- <p>Nos últimos anos, a base de apoio ao trabalho e às propostas de Almir cresceu de maneira consistente, refletindo reconhecimento e confiança da população e do setor produtivo.</p>
+ <p>Nos últimos anos, o trabalho do Almir passou a ser mais cade vez mais reconhecido na cidade, graças ao contato constante com as pessoas e à presença no dia a dia.</p>
  </div>
  <div class="growth-stats">
  <div class="stat-card">
@@ -209,27 +225,42 @@
 <!-- Por que escolher -->
 <section class="secao-por-que">
  <div class="container">
- <h2 class="section-title">Por que é vantajoso tê-lo como parceiro institucional</h2>
+ <h2 class="section-title">Por que escolher o Almir?</h2>
  <div class="why-grid">
 <div class="cartao-por-que">
- <h3>Experiência técnica real</h3>
- <p>Capacidade de analisar demandas, construir diagnósticos e propor soluções práticas.</p>
+ <div class="numero-visual">01</div>
+ <div class="conteudo-card">
+ <h3>Experiência de verdade</h3>
+ <p>Sabe identificar problemas, entender as demandas e apontar soluções que funcionam.</p>
+ </div>
  </div>
 <div class="cartao-por-que">
- <h3>Articulação institucional</h3>
- <p>Domínio do funcionamento das três esferas para direcionar recursos de forma eficiente.</p>
+ <div class="numero-visual">02</div>
+ <div class="conteudo-card">
+ <h3>Capacidade de construir caminhos</h3>
+ <p>Conecta áreas, instituições e pessoas para fazer projetos saírem do papel.</p>
+ </div>
  </div>
 <div class="cartao-por-que">
- <h3>Visão estratégica</h3>
- <p>Foco em resultados mensuráveis e projetos que geram impacto imediato e duradouro.</p>
+ <div class="numero-visual">03</div>
+ <div class="conteudo-card">
+ <h3>Compromisso com a entrega</h3>
+ <p>Trabalha para que cada ação gere melhorias concretas no dia a dia da população.</p>
+ </div>
  </div>
 <div class="cartao-por-que">
- <h3>Transparência e profissionalismo</h3>
- <p>Compromisso com gestão responsável das verbas e prestação de contas contínua.</p>
+ <div class="numero-visual">04</div>
+ <div class="conteudo-card">
+ <h3>Transparência sempre</h3>
+ <p>Trabalha com responsabilidade, clareza e prestação de contas.</p>
+ </div>
  </div>
 <div class="cartao-por-que">
- <h3>Atenção às necessidades reais</h3>
- <p>Atuação voltada para demandas verdadeiras, não apenas agendas políticas tradicionais.</p>
+ <div class="numero-visual">05</div>
+ <div class="conteudo-card">
+ <h3>Olhar para o que importa</h3>
+ <p>Atua baseado nas necessidades reais da cidade, não em agendas políticas vazias.</p>
+ </div>
  </div>
  </div>
  </div>
@@ -252,7 +283,7 @@
  </div>
  <div class="contact-item">
  <h4>Endereço</h4>
- <p>Bertioga, SP - Rua Manoel Gajo, 649 - Centro, Bertioga - SP, 11250-462</p>
+ <p>Bertioga, SP - Rua Manoel Gajo, 649 - Centro, CEP: 11250-462</p>
  </div>
  </div>
  </div>
