--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
          <div class="grid-perfil">
           <div class="container-imagem-perfil">
             <img src="IMG_8397.JPG" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="0">
-            <img src="IMG_8397.JPG" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="1">
-            <img src="IMG_8397.JPG" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="2">
-            <img src="IMG_8397.JPG" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="3">
+            <img src="almir exatus aperto de mao foto.jpg" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="1">
+            <img src="almir exatus foto 1.jpg" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="2">
+            <img src="almir exatus aperto de mao foto.jpg" alt="Almir Rogério dos Santos" class="img-perfil" data-slide="3">
           </div> <div class="perfil-info">
  <div class="line-separator"></div>
 
