--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  <div class="instituto-content">
  <div class="instituto-hero">
  <div class="instituto-image">
- <img src="https://i.pinimg.com/1200x/78/0f/25/780f25868d52a97f5e150dc04312355e.jpg" alt="Pessoa idosa na fiseotepia">
+ <img src="unplash old man.jpg" alt="Pessoa idosa na fiseotepia">
  </div>
  <div class="instituto-box">
  <h3>O que o Instituto vai oferecer</h3>
@@ -275,11 +275,11 @@
 <div class="detalhes-contato">
  <div class="contact-item">
  <h4>Email</h4>
- <p>contato@almirdaexatus.com.br</p>
+ <p>exatus-adm@hotmail.com</p>
  </div>
  <div class="contact-item">
  <h4>Telefone</h4>
- <p>(13) 99999-9999</p>
+ <p>(13) 3317.4572</p>
  </div>
  <div class="contact-item">
  <h4>Endereço</h4>
