--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                                 <p class="descricao" id="desc">
                                     Almir Rogério dos Santos, conhecido como Almir da Exatus, é contador,
-                                    empreendedor e pré-candidato a deputado estadual. Carrega 25 anos de atuação em
+                                    empreendedor e candidato a deputado. Carrega 25 anos de atuação em
                                     gestão e contabilidade, formando uma história guiada por dedicação, ética,
                                     compromisso e um olhar firme para fazer a diferença em São Paulo.
                                 </p>
@@ -152,7 +152,7 @@
                         compromisso com resultados reais. Sua vivência no setor lhe deu uma visão ampla
                         sobre as necessidades das cidades, das famílias e dos empreendedores que
                         movimentam a economia local</p>
-                    <p>Agora, como pré-candidato a deputado estadual, leva consigo essa bagagem
+                    <p>Agora, como candidato a deputado, leva consigo essa bagagem
                         construída na prática não em promessas. Seu compromisso é representar com
                         seriedade, dialogar com quem precisa ser ouvido e atuar com um olhar firme para
                         transformar São Paulo em um estado melhor e preparado para gerar novas
